Stub remote dns_sd module and list application

--- a/libs/gpusd/remote/CMakeLists.txt
+++ b/libs/gpusd/remote/CMakeLists.txt
@@ -23,3 +23,5 @@ install(FILES ${HEADERS} DESTINATION include/gpusd${VERSION_MAJOR}/remote
 install(TARGETS ${LIBRARY}
   ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
   COMPONENT lib)
+
+add_subdirectory(dns_sd)
