Fix make install
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/CMakeLists.txt
+++ b/libs/eq/CMakeLists.txt
@@ -15,8 +15,7 @@ add_subdirectory(server)
 
 install(FILES eq.h DESTINATION include/eq COMPONENT eqdev)
 
-# TODO: this will be incorporated into PURPLE_ADD_LIBRARY
-configure_file(Equalizer.pc.in Equalizer.pc @ONLY)
+configure_file(Equalizer.pc.in ${CMAKE_CURRENT_BINARY_DIR}/Equalizer.pc @ONLY)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/Equalizer.pc
         DESTINATION lib/pkgconfig COMPONENT eqlib)
 
