--- a/libs/GLEW/CMakeLists.txt
+++ b/libs/GLEW/CMakeLists.txt
@@ -5,6 +5,7 @@ if(GLEW_MX_FOUND)
   include_directories(BEFORE SYSTEM ${GLEW_MX_INCLUDE_DIRS})
   set(GLEW_LIBRARY ${GLEW_MX_LIBRARIES})
 else()
+  set(EQ_GLEW_INTERNAL TRUE)
   set(GLEW_VERSION 1.7.0)
   set(GLEW_DIR ${CMAKE_BINARY_DIR}/glew-${GLEW_VERSION})
   set(GLEW_INCLUDE_DIRS "${OUTPUT_INCLUDE_DIR}/eq")
