--- a/libs/gpusd/cgl/CMakeLists.txt
+++ b/libs/gpusd/cgl/CMakeLists.txt
@@ -14,8 +14,8 @@ find_library(CARBON_LIBRARY Carbon)
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
 
-set(LIBRARY gpusd_agl)
-set(INCLUDE gpusd/agl)
+set(LIBRARY gpusd_cgl)
+set(INCLUDE gpusd/cgl)
 
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(${LIBRARY} ${CARBON_LIBRARY} ${OPENGL_LIBRARIES} gpusd)
