Remote auto-config progress: * extend --eq-config with the ability to provide GPU-SD session name   (anything without .eqc ending) * Default --eq-config to 'local' * start implementing remote auto-config ** Discovery functional ** Configuration to be done
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/server/CMakeLists.txt
+++ b/libs/eq/server/CMakeLists.txt
@@ -127,11 +127,17 @@ set(AUTOCONFIG
 )
 
 set(SERVER_LIBRARIES shared Equalizer)
-if(FOUND_GPUSD)
-  include_directories(${CMAKE_SOURCE_DIR}/gpu-sd/libs)
+if(GPUSD_FOUND)
   list(APPEND SOURCES ${AUTOCONFIG})
+  list(APPEND CMAKE_MODULE_PATH ${Equalizer_SOURCE_DIR}/gpu-sd/CMake)
+  include_directories(${CMAKE_SOURCE_DIR}/gpu-sd/libs)
   add_definitions(-DEQ_USE_GPUSD)
-  list(APPEND SERVER_LIBRARIES gpusd_dns_sd)
+
+  find_package(DNSSD)
+  if(DNSSD_FOUND)
+    add_definitions(-DEQ_USE_GPUSD_DNSSD)
+    list(APPEND SERVER_LIBRARIES gpusd_dns_sd)
+  endif()
   if(EQ_AGL_USED)
     list(APPEND SERVER_LIBRARIES gpusd_cgl)
   endif()
