Fix Windows build
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/server/CMakeLists.txt
+++ b/libs/eq/server/CMakeLists.txt
@@ -130,6 +130,7 @@ set(SERVER_LIBRARIES shared Equalizer)
 if(GPUSD_FOUND)
   list(APPEND SOURCES ${AUTOCONFIG})
   list(APPEND CMAKE_MODULE_PATH ${Equalizer_SOURCE_DIR}/gpu-sd/CMake)
+  list(APPEND SERVER_LIBRARIES gpusd)
   include_directories(${CMAKE_SOURCE_DIR}/gpu-sd/libs)
   add_definitions(-DEQ_USE_GPUSD)
 
