Fix and re-enable WGL module

--- a/libs/gpusd/wgl/GLEW/CMakeLists.txt
+++ b/libs/gpusd/wgl/GLEW/CMakeLists.txt
@@ -5,11 +5,13 @@ if(GLEW_MX_FOUND)
   include_directories(BEFORE SYSTEM ${GLEW_MX_INCLUDE_DIRS})
   set(GLEW_LIBRARY ${GLEW_MX_LIBRARIES})
 else()
-  set(EQ_GLEW_INTERNAL TRUE)
+  set(GPUSD_GLEW_INTERNAL TRUE)
+  set(GLEW_MX_FOUND TRUE)
   set(GLEW_VERSION 1.7.0)
   set(GLEW_DIR ${CMAKE_BINARY_DIR}/glew-${GLEW_VERSION})
-  set(GLEW_INCLUDE_DIRS "${OUTPUT_INCLUDE_DIR}/eq")
-  set(GLEW_LIBRARY "GLEW_MX-Equalizer")
+  set(GLEW_MX_INCLUDE_DIRS "${OUTPUT_INCLUDE_DIR}/eq")
+  set(GLEW_MX_LIBRARIES "GLEW_MX-GPUSD")
+  set(GLEW_LIBRARY "${GLEW_MX_LIBRARIES}")
   set(GLEW_TGZ ${CMAKE_CURRENT_SOURCE_DIR}/GLEW/glew-${GLEW_VERSION}.tgz)
 
   if(NOT EXISTS ${GLEW_DIR})
@@ -32,17 +34,13 @@ else()
     install(FILES ${OUTPUT_INCLUDE_DIR}/eq/${file} DESTINATION include/eq/GL COMPONENT eqdev)
   endforeach()
 
-  include_directories(BEFORE SYSTEM ${GLEW_INCLUDE_DIRS})
+  include_directories(BEFORE SYSTEM ${GLEW_MX_INCLUDE_DIRS})
   add_definitions(-DGLEW_STATIC=1 -DGLEW_MX=1 -DGLEW_NO_GLU)
   add_library(${GLEW_LIBRARY} STATIC ${GLEW_DIR}/src/glew.c)
   set_target_properties(${GLEW_LIBRARY} PROPERTIES
                         FOLDER "Libraries" VERSION ${GLEW_VERSION})
 
-  if(EQ_GLX_USED)
-    add_definitions(-DGLEW_APPLE_GLX=1)
-  endif(EQ_GLX_USED)
-  
   install(TARGETS ${GLEW_LIBRARY} ARCHIVE DESTINATION lib COMPONENT eqdev)
-  message(STATUS "${GLEW_LIBRARY}-${GLEW_VERSION} will be built and linked statically to Equalizer.")
+  message(STATUS "${GLEW_LIBRARY}-${GLEW_VERSION} will be built and linked statically to GPU-SD.")
 endif()
 
