Fix and enable WGL GPU-SD module
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[x] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/server/CMakeLists.txt
+++ b/libs/eq/server/CMakeLists.txt
@@ -145,6 +145,9 @@ if(GPUSD_FOUND)
   if(EQ_GLX_USED)
     list(APPEND SERVER_LIBRARIES gpusd_glx)
   endif()
+  if(WIN32)
+    list(APPEND SERVER_LIBRARIES gpusd_wgl)
+  endif()
 endif()
 
 if(EQUALIZER_INSTALL_SERVER_HEADERS)
