--- a/libs/gpusd/cgl/CMakeLists.txt
+++ b/libs/gpusd/cgl/CMakeLists.txt
@@ -25,4 +25,4 @@ set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
 install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
 install(TARGETS ${LIBRARY}
   ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  COMPONENT lib)
+  COMPONENT runtime)
