--- a/libs/gpusd/glx/CMakeLists.txt
+++ b/libs/gpusd/glx/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(OpenGL REQUIRED)
 include_directories(SYSTEM ${X11_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} /usr/X11R6/include)
 
 set(LIBRARY gpusd_glx)
-set(INCLUDE gpusd/glx)
+set(INCLUDE include/gpusd/glx)
 
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(${LIBRARY} ${CARBON_LIBRARY} ${OPENGL_LIBRARIES} ${X11_LIBRARIES} gpusd)
