Fix public_header usage

--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -33,9 +33,9 @@ set_target_properties(${LIBRARY} PROPERTIES
   COMPILE_DEFINITIONS "GPUSD_SHARED")
 
 # install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
-install(TARGETS ${LIBRARY} PUBLIC_HEADER
+install(TARGETS ${LIBRARY} PUBLIC_HEADER DESTINATION ${INCLUDE}
   ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  FRAMEWORK DESTINATION lib COMPONENT runtime)
+  FRAMEWORK DESTINATION "/Library/Frameworks" COMPONENT runtime)
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
