--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -35,7 +35,7 @@ set_target_properties(${LIBRARY} PROPERTIES
 # install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
 install(TARGETS ${LIBRARY} PUBLIC_HEADER DESTINATION ${INCLUDE}
   ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  FRAMEWORK DESTINATION "/Library/Frameworks" COMPONENT runtime)
+  FRAMEWORK DESTINATION lib COMPONENT runtime)
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
