Fix CMake install targets

--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -29,13 +29,12 @@ source_group(\\ FILES CMakeLists.txt ${HEADERS} ${SOURCES})
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 set_target_properties(${LIBRARY} PROPERTIES
   VERSION ${VERSION} SOVERSION ${VERSION_MAJOR}
-  FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}"
-  COMPILE_DEFINITIONS "GPUSD_SHARED")
-
-# install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
-install(TARGETS ${LIBRARY} PUBLIC_HEADER DESTINATION ${INCLUDE}
-  ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  FRAMEWORK DESTINATION lib COMPONENT runtime)
+  FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}" COMPILE_DEFINITIONS "GPUSD_SHARED")
+install(TARGETS ${LIBRARY}
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
+  ARCHIVE DESTINATION lib COMPONENT dev
+  RUNTIME DESTINATION bin COMPONENT runtime
+  LIBRARY DESTINATION lib COMPONENT runtime)
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
