--- a/libs/gpusd/cgl/CMakeLists.txt
+++ b/libs/gpusd/cgl/CMakeLists.txt
@@ -5,7 +5,7 @@ endif()
 set(HEADERS
   module.h
 )
-  
+
 set(SOURCES
   module.cpp
 )
@@ -17,12 +17,14 @@ include_directories(${OPENGL_INCLUDE_DIR})
 set(LIBRARY gpusd_cgl)
 set(INCLUDE include/gpusd/cgl)
 
+source_group(\\ FILES CMakeLists.txt ${HEADERS} ${SOURCES})
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(${LIBRARY} ${CARBON_LIBRARY} ${OPENGL_LIBRARIES} gpusd)
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
-  SOVERSION ${VERSION_MAJOR})
-
-install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
+  SOVERSION ${VERSION_MAJOR} FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}"
+  COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
-  ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  COMPONENT runtime)
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
+  ARCHIVE DESTINATION lib COMPONENT dev
+  RUNTIME DESTINATION bin COMPONENT runtime
+  LIBRARY DESTINATION lib COMPONENT runtime)
