--- a/libs/gpusd/dns_sd/CMakeLists.txt
+++ b/libs/gpusd/dns_sd/CMakeLists.txt
@@ -3,8 +3,6 @@ if(NOT DNSSD_FOUND)
   return()
 endif()
 
-include_directories(${DNSSD_INCLUDE_DIRS})
-
 set(HEADERS
   module.h
 )
@@ -13,9 +11,12 @@ set(SOURCES
   module.cpp
 )
 
-set(LIBRARY gpusd_dns_sd)
+include_directories(${DNSSD_INCLUDE_DIRS})
 
+set(LIBRARY gpusd_dns_sd)
 set(INCLUDE include/gpusd/dns_sd)
+
+source_group(\\ FILES CMakeLists.txt ${HEADERS} ${SOURCES})
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 if(WIN32)
   target_link_libraries(${LIBRARY} ${DNSSD_LIBRARIES} gpusd ws2_32)
@@ -23,9 +24,10 @@ else()
   target_link_libraries(${LIBRARY} ${DNSSD_LIBRARIES} gpusd)
 endif()
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
-  SOVERSION ${VERSION_MAJOR} COMPILE_DEFINITIONS "GPUSD_SHARED")
-
-install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
+  SOVERSION ${VERSION_MAJOR} FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}"
+  COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
-  ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  COMPONENT runtime)
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
+  ARCHIVE DESTINATION lib COMPONENT dev
+  RUNTIME DESTINATION bin COMPONENT runtime
+  LIBRARY DESTINATION lib COMPONENT runtime)
