--- a/libs/gpusd/wgl/CMakeLists.txt
+++ b/libs/gpusd/wgl/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
 )
 
 find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
 
 set(LIBRARY gpusd_wgl)
 set(INCLUDE include/gpusd/wgl)
@@ -19,9 +20,10 @@ source_group(\\ FILES CMakeLists.txt ${HEADERS} ${SOURCES})
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(${LIBRARY} ${OPENGL_LIBRARIES} gpusd)
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
-  SOVERSION ${VERSION_MAJOR} COMPILE_DEFINITIONS "GPUSD_SHARED")
-
-install(FILES ${HEADERS} DESTINATION ${INCLUDE} COMPONENT dev)
+  SOVERSION ${VERSION_MAJOR} FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}"
+  COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
-  ARCHIVE DESTINATION lib RUNTIME DESTINATION bin LIBRARY DESTINATION lib
-  COMPONENT lib)
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
+  ARCHIVE DESTINATION lib COMPONENT dev
+  RUNTIME DESTINATION bin COMPONENT runtime
+  LIBRARY DESTINATION lib COMPONENT runtime)
