--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -34,7 +34,8 @@ install(TARGETS ${LIBRARY}
   PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
   ARCHIVE DESTINATION lib COMPONENT dev
   RUNTIME DESTINATION bin COMPONENT runtime
-  LIBRARY DESTINATION lib COMPONENT runtime)
+  LIBRARY DESTINATION lib COMPONENT runtime
+  FRAMEWORK DESTINATION lib COMPONENT runtime)
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
