--- a/libs/gpusd/glx/CMakeLists.txt
+++ b/libs/gpusd/glx/CMakeLists.txt
@@ -27,4 +27,5 @@ install(TARGETS ${LIBRARY}
   PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
   ARCHIVE DESTINATION lib COMPONENT dev
   RUNTIME DESTINATION bin COMPONENT runtime
-  LIBRARY DESTINATION lib COMPONENT runtime)
+  LIBRARY DESTINATION lib COMPONENT runtime
+  FRAMEWORK DESTINATION lib COMPONENT runtime)
