--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -25,11 +25,11 @@ set_target_properties(${LIBRARY} PROPERTIES
   VERSION ${VERSION} SOVERSION ${VERSION_MAJOR}
   FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}" COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
-  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
-  ARCHIVE DESTINATION lib COMPONENT dev
-  RUNTIME DESTINATION bin COMPONENT runtime
-  LIBRARY DESTINATION lib COMPONENT runtime
-  FRAMEWORK DESTINATION lib COMPONENT runtime)
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusd_dev
+  ARCHIVE DESTINATION lib COMPONENT gpusd_dev
+  RUNTIME DESTINATION bin COMPONENT gpusd_runtime
+  LIBRARY DESTINATION lib COMPONENT gpusd_runtime
+  FRAMEWORK DESTINATION lib COMPONENT gpusd_runtime)
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
