Remove framework support which is not ready

--- a/libs/gpusd/cgl/CMakeLists.txt
+++ b/libs/gpusd/cgl/CMakeLists.txt
@@ -21,11 +21,10 @@ source_group(\\ FILES CMakeLists.txt ${HEADERS} ${SOURCES})
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(${LIBRARY} ${CARBON_LIBRARY} ${OPENGL_LIBRARIES} gpusd)
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
-  SOVERSION ${VERSION_MAJOR} FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}"
+  SOVERSION ${VERSION_MAJOR} PUBLIC_HEADER "${HEADERS}"
   COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
   PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusd_dev
   ARCHIVE DESTINATION lib COMPONENT gpusd_dev
   RUNTIME DESTINATION bin COMPONENT gpusd_runtime
-  LIBRARY DESTINATION lib COMPONENT gpusd_runtime
-  FRAMEWORK DESTINATION lib COMPONENT gpusd_runtime)
+  LIBRARY DESTINATION lib COMPONENT gpusd_runtime)
