--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -23,13 +23,12 @@ source_group(\\ FILES CMakeLists.txt ${HEADERS} ${SOURCES})
 add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 set_target_properties(${LIBRARY} PROPERTIES
   VERSION ${VERSION} SOVERSION ${VERSION_MAJOR}
-  FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}" COMPILE_DEFINITIONS "GPUSD_SHARED")
+  PUBLIC_HEADER "${HEADERS}" COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
   PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusd_dev
   ARCHIVE DESTINATION lib COMPONENT gpusd_dev
   RUNTIME DESTINATION bin COMPONENT gpusd_runtime
-  LIBRARY DESTINATION lib COMPONENT gpusd_runtime
-  FRAMEWORK DESTINATION lib COMPONENT gpusd_runtime)
+  LIBRARY DESTINATION lib COMPONENT gpusd_runtime)
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
