--- a/libs/gpusd/dns_sd/CMakeLists.txt
+++ b/libs/gpusd/dns_sd/CMakeLists.txt
@@ -24,11 +24,10 @@ else()
   target_link_libraries(${LIBRARY} ${DNSSD_LIBRARIES} gpusd)
 endif()
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
-  SOVERSION ${VERSION_MAJOR} FRAMEWORK TRUE PUBLIC_HEADER "${HEADERS}"
+  SOVERSION ${VERSION_MAJOR} PUBLIC_HEADER "${HEADERS}"
   COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
   PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusd_gpusd-dev
   ARCHIVE DESTINATION lib COMPONENT gpusd_dev
   RUNTIME DESTINATION bin COMPONENT gpusd_runtime
-  LIBRARY DESTINATION lib COMPONENT gpusd_runtime
-  FRAMEWORK DESTINATION lib COMPONENT gpusd_runtime)
+  LIBRARY DESTINATION lib COMPONENT gpusd_runtime)
