Fix GPUSD use in server library
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[x] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/eq/server/CMakeLists.txt
+++ b/libs/eq/server/CMakeLists.txt
@@ -130,6 +130,7 @@ if(GPUSD_FOUND)
   list(APPEND SOURCES ${AUTOCONFIG})
   list(APPEND SERVER_LIBRARIES ${GPUSD_LIBRARIES})
   include_directories(${GPUSD_INCLUDE_DIRS})
+  add_definitions(-DEQ_USE_GPUSD)
   foreach(GPUSD_COMPONENT ${GPUSD_COMPONENTS})
     if(GPUSD_${GPUSD_COMPONENT}_FOUND)
       add_definitions(-DEQ_USE_GPUSD_${GPUSD_COMPONENT})
