--- a/libs/gpusd/glx/CMakeLists.txt
+++ b/libs/gpusd/glx/CMakeLists.txt
@@ -24,7 +24,7 @@ set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
   SOVERSION ${VERSION_MAJOR} PUBLIC_HEADER "${HEADERS}"
   COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
-  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusd_dev
-  ARCHIVE DESTINATION lib COMPONENT gpusd_dev
-  RUNTIME DESTINATION bin COMPONENT gpusd_runtime
-  LIBRARY DESTINATION lib COMPONENT gpusd_runtime)
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusddev
+  ARCHIVE DESTINATION lib COMPONENT gpusddev
+  RUNTIME DESTINATION bin COMPONENT gpusdruntime
+  LIBRARY DESTINATION lib COMPONENT gpusdruntime)
