--- a/libs/gpusd/dns_sd/CMakeLists.txt
+++ b/libs/gpusd/dns_sd/CMakeLists.txt
@@ -27,7 +27,7 @@ set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
   SOVERSION ${VERSION_MAJOR} PUBLIC_HEADER "${HEADERS}"
   COMPILE_DEFINITIONS "GPUSD_SHARED")
 install(TARGETS ${LIBRARY}
-  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusdgpusd-dev
+  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusddev
   ARCHIVE DESTINATION lib COMPONENT gpusddev
   RUNTIME DESTINATION bin COMPONENT gpusdruntime
   LIBRARY DESTINATION lib COMPONENT gpusdruntime)
