Clean up package naming

--- a/libs/gpusd/CMakeLists.txt
+++ b/libs/gpusd/CMakeLists.txt
@@ -24,11 +24,13 @@ add_library(${LIBRARY} SHARED ${HEADERS} ${SOURCES})
 set_target_properties(${LIBRARY} PROPERTIES
   VERSION ${VERSION} SOVERSION ${VERSION_MAJOR}
   PUBLIC_HEADER "${HEADERS}" COMPILE_DEFINITIONS "GPUSD_SHARED")
-install(TARGETS ${LIBRARY}
-  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusddev
-  ARCHIVE DESTINATION lib COMPONENT gpusddev
-  RUNTIME DESTINATION bin COMPONENT gpusdruntime
-  LIBRARY DESTINATION lib COMPONENT gpusdruntime)
+if(CMAKE_PROJECT_NAME MATCHES "gpusd")
+    install(TARGETS ${LIBRARY}
+      PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
+      ARCHIVE DESTINATION lib COMPONENT dev
+      RUNTIME DESTINATION bin COMPONENT runtime
+      LIBRARY DESTINATION lib COMPONENT runtime)
+endif()
 
 add_subdirectory(cgl)
 add_subdirectory(glx)
