--- a/libs/gpusd/glx/CMakeLists.txt
+++ b/libs/gpusd/glx/CMakeLists.txt
@@ -23,8 +23,10 @@ target_link_libraries(${LIBRARY} ${OPENGL_LIBRARIES} ${X11_LIBRARIES} gpusd)
 set_target_properties(${LIBRARY} PROPERTIES VERSION ${VERSION}
   SOVERSION ${VERSION_MAJOR} PUBLIC_HEADER "${HEADERS}"
   COMPILE_DEFINITIONS "GPUSD_SHARED")
-install(TARGETS ${LIBRARY}
-  PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT gpusddev
-  ARCHIVE DESTINATION lib COMPONENT gpusddev
-  RUNTIME DESTINATION bin COMPONENT gpusdruntime
-  LIBRARY DESTINATION lib COMPONENT gpusdruntime)
+if(CMAKE_PROJECT_NAME MATCHES "gpusd")
+  install(TARGETS ${LIBRARY}
+    PUBLIC_HEADER DESTINATION ${INCLUDE} COMPONENT dev
+    ARCHIVE DESTINATION lib COMPONENT dev
+    RUNTIME DESTINATION bin COMPONENT runtime
+    LIBRARY DESTINATION lib COMPONENT runtime)
+endif()
