Implement limiting readback to updated region in eqPly: - Track normalized region in KD-Tree renderer - Update pixel-based region in eqPly::Channel - Use pixel-based region to form intersection with requested readback
To be moved to client library with proper API later.

[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[x] New Feature
[ ] Cleanup
[x] Optimization
[ ] Documentation

--- a/examples/seqPly/CMakeLists.txt
+++ b/examples/seqPly/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2011 Stefan Eilemann <eile@eyescale.ch>
+# Copyright (c) 2011-2012 Stefan Eilemann <eile@eyescale.ch>
 
 if(MSVC)
   add_definitions(/wd4996)
@@ -24,6 +24,7 @@ set(KD_SOURCES
     ../eqPly/vertexBufferLeaf.cpp
     ../eqPly/vertexBufferNode.cpp
     ../eqPly/vertexBufferRoot.cpp
+    ../eqPly/vertexBufferState.cpp
     ../eqPly/vertexData.cpp
 )
 
