--- a/libs/eq/client/CMakeLists.txt
+++ b/libs/eq/client/CMakeLists.txt
@@ -1,11 +1,13 @@
 ##
 # Path : libs/client/CMakeLists.txt
 # Copyright (c) 2010 Daniel Pfeifer <daniel@pfeifer-mail.de>
-#               2010-2011 Stefan Eilemann <eile@eyescale.ch>
+#               2010-2012 Stefan Eilemann <eile@eyescale.ch>
 #               2011 Cedric Stalder <cedric.stalder@gmail.ch>
 ##
 
-find_package(MAGELLAN)
+if(EQUALIZER_USE_MAGELLAN)
+  find_package(MAGELLAN)
+endif()
 
 # TODO: resolve two-way dependency between client and util!
 include(configure.cmake)
