--- a/libs/eq/client/CMakeLists.txt
+++ b/libs/eq/client/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 if(APPLE)
   if(EQ_AGL_USED)
     find_library(CARBON_LIBRARY Carbon)
-    list(APPEND EQ_LIBRARIES "${OPENGL_LIBRARIES}")
+    list(APPEND EQ_LIBRARIES "${OPENGL_gl_LIBRARY}")
   endif(EQ_AGL_USED)
   if(EQ_GLX_USED)
     list(APPEND EQ_LIBRARIES GL)
